add title in html

--- a/hw3_anna_hyunjung_kim.html
+++ b/hw3_anna_hyunjung_kim.html
@@ -98,6 +98,9 @@ pre > code.sourceCode > span > a:first-child::before { text-decoration: underlin
 </header>
 
 
+<section id="homework-3---anna-hyunjung-kim" class="level1">
+<h1>Homework 3 - Anna Hyunjung Kim</h1>
+</section>
 <section id="question-1" class="level1">
 <h1>Question 1</h1>
 <section id="load-the-required-package" class="level2">
